# quadcopter

./: README.md  node_calibration.py
frequency/: frequency.ino
ros/asctec/HB_Link/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/asctec/HB_Link/HX_controller/: .HX_controller_sub.cpp.swp  HX_controller_sub.cpp
ros/asctec/HB_Link/launch/: HB_Link.launch  HB_fix.launch  HB_mobile.launch
ros/asctec/HB_Link/src/: HX_controller_pub.cpp  chemin.txt  chemin_kalman.txt  fix_interaction.cpp  fix_interaction.h  fix_receiver.cpp  fix_receiver.h  input_lecture.cpp  input_lecture.h  mobile_controller.cpp  mobile_controller.cpp~  mobile_interaction.cpp  mobile_stream.cpp  mobile_stream.h  parameters  udp_client.h  udp_server.cpp  udp_server_original.cpp
ros/asctec/main_control/: CMakeLists.txt  CMakeLists.txt~  main_control.launch  mainpage.dox  manifest.xml
ros/asctec/main_control/msg/: estimate.msg  full_state.msg  state_command.msg
ros/asctec/main_control/params/: control_params.yaml
ros/asctec/main_control/src/: asctec2px4_control.cpp  get_angles.cpp  main_controller.cpp  main_controller_2.cpp  main_controller_teleop.cpp  main_controller_test (copy).cpp  main_controller_test.cpp
ros/height/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  simulation.todo  teamocil_layout.yml
ros/height/include/height/: Kalman_1D.h
ros/height/msg/: Attitude.msg~
ros/height/msg_gen/lisp/: Attitude.lisp  _package.lisp  full_pose.lisp  height-msg.asd  state.lisp  xy_state.lisp
ros/height/src/: controller.cpp  filter.cpp  hector_mapping_analysis.cpp  laser_filter.cpp  pid.cpp  simulated_OptFlow.cpp  xy_pose.cpp  z_pose.cpp
ros/height/src/old/: laser_transform.cpp  world_to_quad_transform.cpp  xy_odom_sim.cpp  xy_position.cpp
ros/height/src/old controller/: controller.cpp  laser_transform.cpp
ros/height_quad/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  quad.todo
ros/height_quad/bagfiles/: lag_eval-_px4flow_opt_flow.csv  lag_eval.bag  name.bag
ros/height_quad/include/height_quad/: pid.h
ros/height_quad/launch/: global.launch  test.launch
ros/height_quad/msg/: state.msg~
ros/height_quad/msg_gen/lisp/: Attitude.lisp  Estimate.lisp  EstimateMulti.lisp  EstimateSingle.lisp  _package.lisp  _package_Attitude.lisp  _package_Estimate.lisp  _package_EstimateMulti.lisp  _package_EstimateSingle.lisp  _package_full_pose.lisp  _package_state.lisp  full_pose.lisp  height_quad-msg.asd  state.lisp
ros/height_quad/src/: Kalman_1D.cpp  Kalman_2D.cpp  controller_quad.cpp  controller_quad_z.cpp  estimator.cpp  filter.cpp  floor_tester.cpp  pid.cpp  repeater_node.cpp  xy_odometry.cpp  xy_pose.cpp  xy_pose_no_mavros.cpp  xy_pose_no_mavros.cpp~  xy_pose_publishing_array.cpp  z_pose.cpp  z_pose.cpp~  z_pose_no_mavros.cpp
ros/height_quad/src/old/: height_filter.cpp
ros/height_quad/src/old_odometry_with_covariance/: xy_odometry.cpp
ros/height_quad/src/old_optflowpx4_and_controller/: controller_quad.cpp  controller_quad_z.cpp
ros/height_quad/src/xy and z poses WITH mavros/: xy_pose.cpp
ros/height_quad/src/xy_pose with px4/: xy_odometry.cpp  xy_pose.cpp  xy_pose_no_mavros.cpp
ros/height_quad/src/xy_pose_backup_4thAUGUST/: xy_pose_no_mavros.cpp
ros/simulation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  ros_quad.sh
ros/simulation/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py
ros/simulation/devel/: .catkin  .rosinstall  setup.sh
ros/simulation/gtest/: CTestTestfile.cmake  Makefile
ros/simulation/include/: move_base.launch.xml
ros/simulation/launch/: ekf_template.launch  only_spawn_quadrotor.launch  pixhawk.launch  quad.launch  simulation_quad.launch  spawn_quadrotor_sim.launch  test.launch
ros/simulation/param/: dwa_local_planner_params.yaml  local_costmap_params.yaml
ros/simulation/rviz_cfg/: model.rviz  slam.rviz  tf.rviz  tf.rviz.del
ros/simulation/scripts/: hover-quad.py  hover.py  med_sonar.py  optflow-odom.py  pos_brod.py  quad-state.py  teleop-quad.py  teleop.py  test.py
ros/simulation/urdf/: only_quadrotor.gazebo.xacro  quad.stl  quadrotor.gazebo.xacro  quadrotor_base.urdf.xacro  quadrotor_plugins.gazebo.xacro  quadrotor_sensors.gazebo.xacro  sonar_sensor.urdf.xacro
ros/usb_cam/src/usb_cam_node/: CMakeLists.txt  CMakeLists.txt~  blob.cpp  blob.cpp~  blob.h  blob.h~  blob_detection.cpp  blob_detection.cpp~  blob_detection.h  blob_detection.h~  blob_detection_tools.cpp  main.cpp  p3p.cpp  p3p.hpp  sensor.cpp  sensor.hpp  sensor_14aug.cpp  sensor_27july.cpp  sensor_27july.hpp  sensor_old.cpp  sensor_old.hpp  usb_cam_node.cpp  usb_cam_node_27july.cpp  usb_cam_node_simple.cpp  usb_cam_node_with_blob_detection.cpp  usb_cam_node_with_blob_detection.cpp~
ros/user_control/: CMakeLists.txt  burrito.launch  burritorca.launch  liam_test_algo1_1.launch  liam_test_algo2.launch  px4_test_robot.launch  ros_webots_launch.launch  ros_webots_launch_duarte.launch  ros_webots_launch_duarte_1quad.launch  ros_webots_launch_liam.launch  ros_webots_launch_steven.launch  test_flight_manager.launch  testing_ground.launch  user_control_all.launch.save  user_control_all_B.launch  user_control_simple.launch
ros/user_control/params/: line_formation.txt  line_formation.txt~  quad96l.txt  servers.txt  servers.txt~  square_formation_2.txt  square_formation_3.txt  triangle_formation.txt  triangle_formation_2.txt
ros/user_control/src/: command_line.cpp  custom_command.cpp  custom_command.h  multi_command_line.cpp  udp_server.h  user_control_pc.cpp  user_control_pc_old.cpp  user_control_sim_old.cpp  user_terminal.cpp
rosbuild/cam/: CMakeLists.txt  CMakeLists.txt~
rosbuild/cam/include/cam/: marker_detection.h  p3p.hpp
rosbuild/cam/launch/: node.launch  usb_cam.launch
rosbuild/cam/src/: blob_detection.cpp  blob_detection_debug.cpp  blob_detection_debug_qt.cpp  marker_detection.cpp  node.cpp  p3p.cpp  qtfile.cpp  usb_cam_node.cpp
rosbuild/rab3D/: CMakeLists.txt  manifest.xml  node_test_robot.launch
rosbuild/rab3D/src/: egomotion_2.cpp  egomotion_2.h  rab3D_robot_sim.cpp
(+567 files in other folders)
